err/p4a.subtyper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/p4a'...
Listing './lib/python3.5/site-packages/p4a/subtyper'...
Listing './lib/python3.5/site-packages/p4a/subtyper/Extensions'...
Listing './lib/python3.5/site-packages/p4a/subtyper/contentmenu'...
Compiling './lib/python3.5/site-packages/p4a/subtyper/contentmenu/tests.py'...
***   File "./lib/python3.5/site-packages/p4a/subtyper/contentmenu/tests.py", line 10
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p4a/subtyper/engine.py'...
***   File "./lib/python3.5/site-packages/p4a/subtyper/engine.py", line 16
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a/subtyper/locales'...
Listing './lib/python3.5/site-packages/p4a/subtyper/locales/es'...
Listing './lib/python3.5/site-packages/p4a/subtyper/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/subtyper/locales/eu'...
Listing './lib/python3.5/site-packages/p4a/subtyper/locales/eu/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/p4a/subtyper/menu.py'...
***   File "./lib/python3.5/site-packages/p4a/subtyper/menu.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a/subtyper/profiles'...
Listing './lib/python3.5/site-packages/p4a/subtyper/profiles/default'...
Compiling './lib/python3.5/site-packages/p4a/subtyper/sitesetup.py'...
***   File "./lib/python3.5/site-packages/p4a/subtyper/sitesetup.py", line 17
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a/subtyper/skins'...
Listing './lib/python3.5/site-packages/p4a/subtyper/skins/p4a_subtyper'...
Listing './lib/python3.5/site-packages/p4a/z2utils'...
Compiling './lib/python3.5/site-packages/p4a/z2utils/patches.py'...
***   File "./lib/python3.5/site-packages/p4a/z2utils/patches.py", line 70
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a/z2utils/tests'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir1'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir1/ns'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir1/ns/pkg1'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir2'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir2/ns'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir2/ns/pkg2'...
Compiling './lib/python3.5/site-packages/p4a/z2utils/utils.py'...
***   File "./lib/python3.5/site-packages/p4a/z2utils/utils.py", line 126
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a.subtyper-2.0.egg-info'...
Listing './lib/python3.5/site-packages/p4a.z2utils-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
